--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./assets/style/setup/variables";
+@import "./assets/style/setup/functions";
+@import "./assets/style/setup/mixins";
+
+@import "./assets/style/basics/animations";
+@import "./assets/style/basics/base";
+@import "./assets/style/basics/helpers";
+@import "./assets/style/basics/layour";
+@import "./assets/style/basics/typography";
