--- a/src/app/cmps/comment-input/comment-input.component.html
+++ b/src/app/cmps/comment-input/comment-input.component.html
@@ -4,5 +4,5 @@
     </div>
     <textarea [(ngModel)]="commentTxt" placeholder="Please add your comment here" name="commentTxt" cols="100"
         rows="2"></textarea>
-    <button class="btn" (click)="onAddComment.emit(commentTxt)">SUBMIT</button>
+    <button class="btn" (click)="addComment()">SUBMIT</button>
 </div>
