--- a/src/app/pages/app-home/app-home.component.scss
+++ b/src/app/pages/app-home/app-home.component.scss
@@ -1,5 +1,7 @@
 .app-home {
-    min-height: 100vh;
-    background-color: #f1f1f1;
-    padding: 10px;
+    padding: 50px 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
